Wed Sep 17 10:14:27 2003  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: the sessions dir is now commented out so that
	  we take the default rather then what's in the file by default.

Fri Sep 12 15:32:07 2003  George Lebl <jirka@5z.com>

	* Release 2.4.4.1

Fri Sep 12 15:29:05 2003  George Lebl <jirka@5z.com>

	* daemon/gdm.c, daemon/cookie.c: a little bit of cleanup in the
	  random number department

Fri Sep 12 14:49:30 2003  George Lebl <jirka@5z.com>

	* configure.in: raise version

	* daemon/gdm-net.c: some cleanup and be utterly anal when creating /tmp/.gdm_socket
	  (note: we were anal before, but now we're really REALLY anal)

	* daemon/gdm.c: disable substituting 'nobody' for 'gdm', what was I
	  smoking when I wrote that?

	* daemon/misc.c: some cleanup and make sure gdm_fdprintf writes all
	  the characters it really needs to write.  Also the ensure extension
	  doesn't append extensions to empty strings.

	* daemon/slave.c: use only one pipe for all the waitpids, since we
	  really don't need more then one and this make code simpler.

	* docs/C/gdm.xml: update

Thu Sep 11 16:11:57 2003  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: add comment about ShowLastSession

	* daemon/gdm.h, daemon/slave.c, daemon/misc.[ch], gui/gdmlogin.c,
	  gui/greeter/greeter_session.c: Work with the session setup
	  as implemented now in KDM.  Doesn't add the built in default,
	  custom, failsafe sessions to the greeters themselves though
	  yet, and doesn't change the default session path (will change
	  to /etc/X11/sessions from /etc/X11/dm/Sessions)

	* daemon/gdm.c: minor cleanup

Tue Sep 02 12:11:39 2003  George Lebl <jirka@5z.com>

	* Release 2.4.4.0

Mon Sep 01 14:01:02 2003  George Lebl <jirka@5z.com>

	* daemon/slave.c: move gdm_verify_cleanup after running of
	  PostSession and touching the home dir.  Home dir may be
	  unmounted in pam_close_session leading to failures when
	  trying to touch the home dir in the PostSession script